# modules_scribe

./: CMakeLists.txt  FindLibHamcast.cmake  README.md
include/: scribe_group.hpp  scribe_instance.hpp
src/: scribe_group.cpp  scribe_instance.cpp  scribe_module.cpp
